Make inputs to calculate endpoint required
